[project]
name = "geopython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "lonboard>=0.11.1",
    "pyarrow>=21.0.0",
    "pyproj>=3.7.2",
    "ruff>=0.12.10",
    "shapely>=2.1.1",
]
